<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.mobicents.tools</groupId>
		<artifactId>sip-balancer</artifactId>
		<version>2.0.29</version>
	</parent>

	<artifactId>sip-balancer-jar</artifactId>

	<name>Restcomm Converged Load Balancer Jar</name>
	<description>Restcomm Converged Load Balancer Jar</description>
	<url>https://github.com/Restcomm/load-balancer</url>

	<properties>
		<manifest.url>https://github.com/Restcomm/load-balancer
		</manifest.url>
		<manifest.implementation.title>${project.groupId}:${project.artifactId}
		</manifest.implementation.title>
		<manifest.implementation.version>${project.version}
		</manifest.implementation.version>
		<manifest.implementation.vendor>TeleStax, Inc.
		</manifest.implementation.vendor>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.jboss.cache</groupId>
			<artifactId>jbosscache-core</artifactId>
			<version>3.2.1.GA</version><!--$NO-MVN-MAN-VER$-->
		</dependency>

		<dependency>
			<groupId>org.jboss.cache</groupId>
			<artifactId>jbosscache-pojo</artifactId>
			<version>3.0.0.GA</version>
		</dependency>
		<dependency>
			<groupId>jgroups</groupId>
			<artifactId>jgroups</artifactId>
			<version>2.7.0.GA</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.httpunit</groupId>
			<artifactId>httpunit</artifactId>
			<version>1.7.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.0.34.Final</version>
		</dependency>
		<!-- logging dependency -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>

		<dependency>
			<groupId>com.sun.jdmk</groupId>
			<artifactId>jmxtools</artifactId>
			<version>1.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>			
		</dependency>
	    <dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-log4j12</artifactId> 
		    <version>1.7.5</version>		    
	     </dependency>

		<!--dependency> <groupId>com.sun.jdmk</groupId> <artifactId>jmxtools</artifactId> 
			<version>1.2.1</version> <scope>system</scope> <systemPath>${basedir}/lib/jmxtools-1.2.1.jar 
			</systemPath> <optional>true</optional> </dependency -->

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-api</artifactId>
			<version>${jain-sip-api.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-ri</artifactId>
			<version>${jain-sip-ri.version}</version>
		</dependency>
		<dependency>
			<groupId>com.cloudhopper</groupId>
			<artifactId>ch-smpp</artifactId>
			<version>5.0.8</version>
		</dependency>
		
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>jsr311-api</artifactId>
			<version>1.1.1</version>
		</dependency>
		
		<dependency>
    		<groupId>com.sun.jersey</groupId>
    		<artifactId>jersey-client</artifactId>
    		<version>1.12</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.BalancerRunner
							</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.BalancerRunner
							</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
					<descriptors>
						<descriptor>src/main/assembly/src.xml
						</descriptor>
						<descriptor>src/main/assembly/zip.xml
						</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<!-- this is used for inheritance merges -->
						<phase>package</phase>
						<!-- append to the packaging phase. -->
						<goals>
							<goal>attached</goal><!-- goals == mojos -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArguments>
						<g />
					</compilerArguments>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>false</useProjectReferences>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>wso2-repository-group</id>
			<name>Wso2 Public Maven Repository Group</name>
			<url>http://dist.wso2.org/maven2</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
</project>
